還在修聊天室

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/About/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/About/Index.cshtml
@@ -106,7 +106,7 @@
 }
 
 <h1>Index</h1>
-<div id="sidebar">
+@* <div id="sidebar">
     <div id="sidebar-inside">
         <div class="toggle">
             <button id="toggleSidebar"><i class="fa-solid fa-arrow-left-long"></i>遊戲聊天室</button>
@@ -125,7 +125,12 @@
             </div>
         </div>
     </div>
-</div>
+</div> *@
+<textarea id="messageBoxA"></textarea>
+<button onclick="sendMessageToUserA()">Send Message</button>
+<div id="chatBoxA"></div>
+
+
 
 
 
@@ -137,45 +142,89 @@
             var right = $('#sidebar').css('right') === '0px' ? '-400px' : '0px';
             $('#sidebar').animate({ right: right });
         });
-        const userName = 'badUser'
+        // const userName = @ViewBag.UserName
+        // const connection = new signalR.HubConnectionBuilder()
+        //     .withUrl("/chathub", {
+        //         accessTokenFactory: () => userName
+        //     })
+        //     .build();
+        // // 收到消息後更新 UI
+        // connection.on("ReceiveMessage", (user, message) => {
+        //     const chatWindow = document.getElementById("chatWindow");
+        //     const newMessage = document.createElement("div");
+
+        //     newMessage.className = "message";
+        //     newMessage.innerHTML = `<span class="username"><strong>${user}:</strong></span> ${message}`;
+
+        //     if (user === userName) {
+        //         newMessage.classList.add("own-message");
+        //     } else {
+        //         newMessage.classList.add("other-message");
+        //     }
+
+            
+        //     chatWindow.prepend(newMessage);
+        // });
+
+        // // 開始連接
+        // connection.start().catch(err => console.error(err));
+
+        // // 發送消息
+        // function sendMessage(user, message) {
+        //     const users = userName; // 這裡可以從登入信息中獲取
+        //     const messageInput = document.getElementById("messageInput");
+        //     const inputMessage = messageInput.value;
+        //     console.log(message)
+        //     console.log(inputMessage)
+        //     connection.invoke("SendMessage", users, inputMessage).catch(err => console.error(err));
+        // }
+        // const connection = new signalR.HubConnectionBuilder()
+        //     .withUrl("/chatHub")
+        //     .build();
+
+        // connection.on("ReceiveMessage", (message) => {
+        //     const msg = `Received: ${message}`;
+        //     const chatBox = document.getElementById('chatBoxA');
+        //     chatBox.innerHTML += `<div>${msg}</div>`;
+        // });
+
+        // connection.start().then(() => {
+        //     joinGroup("groupAB");
+        // }).catch(err => console.error(err.toString()));
+
+        // function joinGroup(groupName) {
+        //     connection.invoke("JoinGroup", groupName).catch(err => console.error(err.toString()));
+        // }
+
+        // function sendMessage() {
+        //     const message = document.getElementById('messageBoxA').value;
+        //     sendMessageToGroup("groupAB", message);
+        // }
+
+        // function sendMessageToGroup(groupName, message) {
+        //     connection.invoke("SendMessageToGroup", groupName, message).catch(err => console.error(err.toString()));
+        // }
+        // function sendMessageToUser(username) {
+        //     const message = document.getElementById('messageBoxA').value;
+        //     sendMessageToGroup(username, "User A: " + message);
+        // }
         const connection = new signalR.HubConnectionBuilder()
-            .withUrl("/chathub", {
-                accessTokenFactory: () => userName
-            })
+            .withUrl("/chatHub")
             .build();
-        $(document).ready(function () {
-            console.log(userName);
-        })
-        // 收到消息後更新 UI
-        connection.on("ReceiveMessage", (user, message) => {
-            const chatWindow = document.getElementById("chatWindow");
-            const newMessage = document.createElement("div");
 
-            newMessage.className = "message";
-            newMessage.innerHTML = `<span class="username"><strong>${user}:</strong></span> ${message}`;
-
-            if (user === userName) {
-                newMessage.classList.add("own-message");
-            } else {
-                newMessage.classList.add("other-message");
-            }
-
-            // 添加新訊息到 chatWindow 的頂部
-            chatWindow.prepend(newMessage);
+        connection.on("ReceiveMessage", (message) => {
+            const msg = `Received: ${message}`;
+            const chatBox = document.getElementById('chatBoxA');
+            chatBox.innerHTML += `<div>${msg}</div>`;
         });
 
-        // 開始連接
-        connection.start().catch(err => console.error(err));
+        connection.start().catch(err => console.error(err.toString()));
 
-        // 發送消息
-        function sendMessage(user, message) {
-            const users = userName; // 這裡可以從登入信息中獲取
-            const messageInput = document.getElementById("messageInput");
-            const inputMessage = messageInput.value;
-            console.log(message)
-            console.log(inputMessage)
-            connection.invoke("SendMessage", users, inputMessage).catch(err => console.error(err));
+        function sendMessageToUserA() {
+            const message = document.getElementById('messageBoxA').value;
+            connection.invoke("SendMessageToUserA", message).catch(err => console.error(err.toString()));
         }
+
     </script>
 
 }
