--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/chatbox.css
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/chatbox.css
@@ -1,4 +1,4 @@
-﻿#center-text {
+﻿﻿#center-text {
     display: flex;
     flex: 1;
     flex-direction: column;
@@ -56,7 +56,7 @@
     border-radius: 5px;
     /*   box-shadow: 0px 5px 35px 9px #464a92; */
     box-shadow: 0px 5px 35px 9px #ccc;
-    z-index:999;
+    z-index: 999;
 }
 
 .chat-box-toggle {
@@ -66,7 +66,7 @@
 }
 
 .chat-box-header {
-    background: #5A5EB9;
+    background: #4CAF50;
     height: 70px;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
@@ -142,21 +142,27 @@
 
 .chat-submit {
     position: absolute;
-    bottom: 3px;
-    right: 10px;
-    background: transparent;
+    bottom: 0px;
+    right: 0px;
+    background: #4CAF50;
     box-shadow: none;
     border: none;
-    border-radius: 50%;
-    color: #5A5EB9;
-    width: 35px;
-    height: 35px;
+    color: white;
+    width: 60px;
+    height: 49px;
+    z-index: 999;
 }
-
-.chat-logs {
+    .chat-submit:hover {
+        background: orange;
+    }
+    .chat-logs {
+    position: relative;
     padding: 15px;
     height: 370px;
     overflow-y: scroll;
+    z-index: 9999;
+    display: flex;
+    flex-direction: column-reverse;
 }
 
     .chat-logs::-webkit-scrollbar-track {
@@ -229,4 +235,16 @@
 .cm-msg-button {
     clear: both;
     margin-bottom: 70px;
+}
+.message.own-message {
+    text-align: right;
+    color: purple;
+    margin: 5px;
+    font-weight: 900;
+}
+
+.message.other-message {
+    text-align: left;
+    color: orange;
+    margin: 5px;
 }
