新增: 每日任務按鈕(功能未開放)

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
@@ -228,6 +228,40 @@
                 </table>
             </div>
         </div>
+        <div id="tutorial">
+             <button id="commonbackBTN" style="top:20px !important;" onclick="pagesControl(Canvaslobby)"></button>
+            
+        </div>
+
+        </div>
+        <div id="Mission">
+            <button id="commonbackBTN" style="top:20px !important;" onclick="pagesControl(Canvaslobby)"></button>
+            <div id="mission-container">
+                <div id="missionpage-title">每日任務</div>
+                <table id="msTable" class="table table-striped">
+                    <tr>
+                        <td >餵食貓貓 1 次</td>
+                        <td>0/1</td>
+                        <td >領取獎勵</td>
+                    </tr>
+                    <tr>
+                        <td>遊玩小遊戲 3 次</td>
+                        <td>0/3</td>
+                        <td>領取獎勵</td>
+                    </tr>
+                    <tr>
+                        <td>遊玩小遊戲並取得 5 分</td>
+                        <td>0/1</td>
+                        <td>領取獎勵</td>
+                    </tr>
+                    <tr>
+                        <td>完成所有每日任務</td>
+                        <td>0/3</td>
+                        <td>領取獎勵</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
         <canvas id="CanvasCheckIn"></canvas>
         <canvas id="Canvasrungame"></canvas>
         <canvas id="CanvasGatcha"></canvas>
