--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
@@ -211,29 +211,34 @@
 
         <!-- End 獲得物品確認視窗 -->
         <!-- Start Canvas遊戲畫布 -->
-        <div id="CanvasRank">
-            <button id="commonbackBTN" style="top:20px !important;" onclick="pagesControl(Canvaslobby)"></button>
-            <div id="rank-container">
-                <div id="rankpage-title">小遊戲排行榜</div>
-                <table id="emTable" class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th style="width: 60px;">排名</th>
-                            <th>玩家名稱</th>
-                            <th>分數</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    </tbody>
-                </table>
+       
+       @* <div id="tutorial">
+             <button id="commonbackBTN" style="top:20px !important;" onclick="pagesControl(Canvaslobby)"></button>
+            <div class="tutorial-pagination">
+                <span class="dot active" style="width:50px; position:absolute;   " ></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
             </div>
         </div>
-        <div id="tutorial">
-             <button id="commonbackBTN" style="top:20px !important;" onclick="pagesControl(Canvaslobby)"></button>
-            
-        </div>
 
+        </div>*@
+    <div id="CanvasRank">
+        <button id="commonbackBTN" style="top:20px !important;" onclick="pagesControl(Canvaslobby)"></button>
+        <div id="rank-container">
+            <div id="rankpage-title">小遊戲排行榜</div>
+            <table id="emTable" class="table table-striped">
+                <thead>
+                    <tr>
+                        <th style="width: 60px;">排名</th>
+                        <th>玩家名稱</th>
+                        <th>分數</th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
         </div>
+    </div>
         <div id="Mission">
             <button id="commonbackBTN" style="top:20px !important;" onclick="pagesControl(Canvaslobby)"></button>
             <div id="mission-container">
