--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/game/Mainstyle.css
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/game/Mainstyle.css
@@ -133,7 +133,7 @@
 #CanvasRank {
     padding-top: 76px;
     position: absolute;
-    right: 430px; /*0902追加*/
+    left: 170px ;/*0902追加*/
     text-align: center;
     justify-content: center;
     width: 406px; /* 維持canvas的寬度為406px */
