修好多Bug哭哭 要睡覺惹覺得這一個月折壽很多

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
@@ -212,7 +212,7 @@
         <!-- End 獲得物品確認視窗 -->
         <!-- Start Canvas遊戲畫布 -->
        
-       @* <div id="tutorial">
+        <div id="tutorial">
              <button id="commonbackBTN" style="top:20px !important;" onclick="pagesControl(Canvaslobby)"></button>
             <div class="tutorial-pagination">
                 <span class="dot active" style="width:50px; position:absolute;   " ></span>
@@ -221,7 +221,7 @@
             </div>
         </div>
 
-        </div>*@
+        </div>
     <div id="CanvasRank">
         <button id="commonbackBTN" style="top:20px !important;" onclick="pagesControl(Canvaslobby)"></button>
         <div id="rank-container">
